# unified-quote

./: .gitignore  Cargo.toml  Dockerfile  README.md  arch_diagrams.md  entrypoint.sh
.github/workflows/: attested-self-build.yml  release.yml  report-live-quotes.yml  test-attestation.yml  update-registry.yml
contracts/: AttestRegistry.vy  TeeGated.vy  UpdateChallenge.vy
deploy/: aws-snp.sh  azure-cvm.sh  gcp-tdx.sh  nodes.config.json  report_nodes.py
deploy/live-snp/: snp-verified.cbor  snp-verified.json
docs/: index.html  live.html
docs/assets/: uq.css  verify.js
docs/status/: nodes.json
src/: compat.rs  integrity.rs  main.rs
src/attest/: mod.rs
src/quote/: eat.rs  mod.rs  value_x.rs  verify.rs
src/tee/: kds.rs  nitro.rs  snp.rs  tdx.rs
stage0/: build-attested.sh
tests/: integration_nitro.rs  integration_snp.rs  integration_tdx.rs  integration_value_x.rs
v2/: .gitignore  BOOTSTRAP.md  BUILD.md  Cargo.toml  DESIGN.md  Dockerfile.enclave  HARDWARE_VALIDATION.md  SHADOW.md  STAGES.md
v2/action/: action.yml
v2/registry/: 8c9587c0981d7878.json  9ad82f00c05fd1da.json  README.md
v2/src/: eat.rs  lib.rs  main.rs  registry.rs  relay.rs  tiers.rs  value_x.rs
v2/src/net/: acme.rs  attested_tls.rs  ct.rs  mod.rs  tls.rs  vsock.rs
v2/src/quote/: roots.rs  verify.rs
v2/src/tee/: azure.rs  detect.rs  kds.rs  mod.rs  nitro.rs  snp.rs  tdx.rs  tpm.rs
v2/src/tee/desktop/: app_attest.rs  host_guest.rs  mod.rs  tpm.rs
v2/src/tee/mobile/: android.rs  ios.rs  mod.rs
v2/tests/: attested_tls_e2e.rs  attested_tls_live.rs  chain_e2e.rs  eat_kms_e2e.rs  hardware_regression.rs
