# The canonical library + `uq` verifier live in the `v2/` member crate
# (package `unified-quote`). This makes it importable as a git dependency by
# the higher layers (attestation-service, attested-workload, cvm-agent).
# The root `uq-runner` package is the legacy TEE-attested GitHub Actions
# runner image (see Dockerfile); kept as a workspace member.
[workspace]
members = ["v2"]
resolver = "2"

[package]
name = "uq-runner"
version = "0.1.0"
edition = "2021"
description = "Attestation shim for GitHub Actions runners in TEEs"

[features]
default = ["nitro", "sev-snp", "tdx"]
nitro = ["dep:serde_cbor", "dep:aws-nitro-enclaves-nsm-api", "dep:serde_bytes"]
sev-snp = ["dep:p384"]
tdx = ["dep:p256"]
# Future: sgx (backport from tdx)

[dependencies]
# Core
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
serde_with = { version = "3", features = ["hex"] }

# Attestation endpoint
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["limit"] }

# CBOR/COSE — core dependency for EAT token format
ciborium = "0.2"
coset = "0.3"

# Nitro attestation doc parsing + NSM device communication
serde_cbor = { version = "0.11", optional = true }
aws-nitro-enclaves-nsm-api = { version = "0.5", features = ["nix"], optional = true }
serde_bytes = { version = "0.11", optional = true }

# Crypto verification (ECDSA for platform quote signatures)
p384 = { version = "0.13", features = ["ecdsa"], optional = true }
p256 = { version = "0.13", features = ["ecdsa"], optional = true }
ecdsa = { version = "0.16", features = ["verifying"] }
x509-cert = { version = "0.2", features = ["std"] }
der = { version = "0.7", features = ["std"] }
spki = "0.7"

# Base64 for EAT HTTP-A transport + TDX PEM parsing
base64 = "0.22"

# AMD KDS + Intel PCS cert fetching
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }

# For TEE device ioctls
nix = { version = "0.29", features = ["ioctl"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
