[package]
name = "bountynet"
version = "0.1.0"
edition = "2021"
description = "Attested builds: source → artifact, proven by hardware"

[[bin]]
name = "uq"
path = "src/main.rs"

[features]
default = ["nitro", "sev-snp", "tdx"]
nitro = ["dep:serde_cbor", "dep:aws-nitro-enclaves-nsm-api", "dep:rsa", "dep:aes", "dep:cbc"]
sev-snp = ["dep:p384"]
tdx = []

[dependencies]
# Core
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
ciborium = "0.2"
thiserror = "2"
anyhow = "1"

# Crypto verification
p384 = { version = "0.13", features = ["ecdsa"], optional = true }
p256 = { version = "0.13", features = ["ecdsa"] }
ecdsa = { version = "0.16", features = ["verifying"] }
x509-cert = { version = "0.2", features = ["std"] }
der = { version = "0.7", features = ["std"] }
spki = "0.7"
base64 = "0.22"

# Nitro. The NSM device crate is Unix-only; keep it target-scoped so
# verifier-only builds still compile on developer workstations.
serde_cbor = { version = "0.11", optional = true }
rsa = { version = "0.9", optional = true }
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", features = ["std", "block-padding"], optional = true }

# AMD KDS cert fetch
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }

# ACME (Let's Encrypt TLS-ALPN-01)
instant-acme = "0.8"
rcgen = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
aws-nitro-enclaves-nsm-api = { version = "0.5", features = ["nix"], optional = true }

# TEE device ioctls and vsock are Unix-only.
nix = { version = "0.29", features = ["ioctl"] }
libc = "0.2"
